--- a/part4/index.html
+++ b/part4/index.html
@@ -17,7 +17,7 @@
 
             <a href="login.html" class="login-button">Login</a>
 
-            <a href="#" class="logout-button" style="display:none;">Logout</a>
+            <a href="#" id="logout-button" class="logout-button" style="display:none;">Logout</a>
         </div>
     </header>
     <main>
