--- a/part4/place.html
+++ b/part4/place.html
@@ -26,10 +26,20 @@
             <!-- Reviews will be populated dynamically -->
         </section>
         <section id="add-review">
-            <h2>Add a Review</h2>
-            <form id="review-form">
-                <label for="review-text">Review:</label>
-                <textarea id="review-text" name="review-text" required></textarea>
+    <h2>Add a Review</h2>
+    <form id="review-form">
+        <label for="review-text">Review:</label>
+        <textarea id="review-text" name="review-text" required></textarea>
+
+        <label for="review-rating">Rating:</label>
+        <select id="review-rating" name="review-rating" required>
+            <option value="">Select rating</option>
+            <option value="1">1 ⭐</option>
+            <option value="2">2 ⭐⭐</option>
+            <option value="3">3 ⭐⭐⭐</option>
+            <option value="4">4 ⭐⭐⭐⭐</option>
+            <option value="5">5 ⭐⭐⭐⭐⭐</option>
+        </select>
 
                 <button type="submit">Submit</button>
             </form>
